--- a/sjw2024_ford02_magyarorszagvizei/forras/css/style.css
+++ b/sjw2024_ford02_magyarorszagvizei/forras/css/style.css
@@ -87,7 +87,7 @@ tbody tr td:hover {
     background-color: rgba(18, 131, 185, 0.7);
 }
 
-tbody tr @media(max-width: 992px) {
+@media(max-width: 992px) {
     header h1 {
         font-size: 1.5rem;
     }
