--- a/sjw2024_ford02_magyarorszagvizei/forras/css/style.css
+++ b/sjw2024_ford02_magyarorszagvizei/forras/css/style.css
@@ -50,7 +50,7 @@ h2 {
 table {
     width: 80%;
     margin: auto;
-    box-shadow: 1px 1px 10px 10px var(--dark-blue);
+    box-shadow: 1px 1px 10px var(--dark-blue);
 }
 
 td, th {
@@ -72,11 +72,17 @@ thead tr, tbody tr td:first-child {
 tbody tr td:first-child {
     color: var(--dark-blue);
     font-weight: bold;
+    font-variant: small-caps;
+    width: 25%;
 }
 
 th {
     text-align: center;
     color: #fff;
+}
+
+tbody tr {
+    border-top: 2px solid var(--dark-blue);
 }
 
 tbody tr td {
@@ -85,6 +91,47 @@ tbody tr td {
 
 tbody tr td:hover {
     background-color: rgba(18, 131, 185, 0.7);
+}
+
+.other-images {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.column {
+    border-radius: 5px;
+    filter: grayscale(60%);
+}
+
+.column.c-1 {
+    grid-column: 1/3;
+}
+
+.column.c-6 {
+    grid-column: 3/3;
+    grid-row: 1/3;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--font);
+    letter-spacing: 3px;
+    position: relative;
+}
+
+footer h1 {
+    position: absolute;
+    top: 240px;
+    text-shadow: 5px 5px 10px #000;
 }
 
 @media(max-width: 992px) {
