--- a/sjw2024_ford02_magyarorszagvizei/forras/css/style.css
+++ b/sjw2024_ford02_magyarorszagvizei/forras/css/style.css
@@ -96,7 +96,7 @@ tbody tr td:hover {
 .other-images {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     gap: 20px;
 }
 
@@ -109,10 +109,8 @@ tbody tr td:hover {
     grid-column: 1/3;
 }
 
-.column.c-6 {
-    grid-column: 3/3;
-    grid-row: 1/3;
-}
+
+
 
 footer {
     display: flex;
@@ -126,11 +124,15 @@ footer {
     font-family: var(--font);
     letter-spacing: 3px;
     position: relative;
+    height: 300px;
+}
+
+footer img {
+    position: absolute;
+    z-index: -1;
 }
 
 footer h1 {
-    position: absolute;
-    top: 240px;
     text-shadow: 5px 5px 10px #000;
 }
 
